Fix mongo documents